--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.2.2",
-    "mongoose": "^5.4.20"
+    "mongoose": "^5.4.20",
+    "nodemailer": "^6.0.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
